sjeng/use_undefined_identifier/c0/bishop_mobility
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/bishop_mobility/src/neval.c:676:11: error: use of undeclared identifier 'bishop_mobility_dir'
for ( l = bishop_mobility_dir[diridx] + square; board[l] == 13; l += bishop_mobility_dir[diridx] ) 
          ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/bishop_mobility/src/neval.c:676:70: error: use of undeclared identifier 'bishop_mobility_dir'
for ( l = bishop_mobility_dir[diridx] + square; board[l] == 13; l += bishop_mobility_dir[diridx] ) 
                                                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/bishop_mobility/src/obj/neval.o] Error 1
